# amplifier-module-tool-whisper

./: README.md  pyproject.toml
examples/: whisper.md
src/amplifier_module_tool_whisper/: __init__.py  core.py  whisper_tool.py
tests/: test_whisper_tool.py
