[project]
name = "amplifier-module-tool-whisper"
version = "0.1.0"
description = "OpenAI Whisper transcription tool for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft Corporation" }]
dependencies = ["amplifier-core", "openai>=1.0.0"]

[project.entry-points."amplifier.modules"]
"tool-whisper" = "amplifier_module_tool_whisper:WhisperTool"

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-dev", subdirectory = "amplifier-core", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
